--- a/css/style.css
+++ b/css/style.css
@@ -291,6 +291,8 @@ header.transparente nav a:hover{
     margin-top: 100vh;
 }
 
+#aviso,
+#cookies,
 #ini{
     display: block;
     margin-top: -90px;
@@ -300,6 +302,10 @@ header.transparente nav a:hover{
 .fila{
     display: flex;
     padding: 2rem 1rem;
+}
+
+.fila.contacto{
+    margin-top: 80px;
 }
 
 .col-100{
